# coalyx-cli

./: .gitignore  COALYX.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: agent_skills.md  user_guide.md
src/: __init__.py
src/cli/: __init__.py  main.py  ui.py
src/core/: __init__.py  config.py  embedding.py  env.py  jupyter.py  model.py  monitor.py  path_auditor.py  path_planner.py  pipeline.py  schema.py  uncertainty.py
src/extensions/: __init__.py  hook_runner.py  registry.py  skill_loader.py
src/memory/: __init__.py  compactor.py  context_tracker.py  project_memory.py  session_store.py  session_workspace.py
src/tools/: __init__.py  base.py  confirmation.py  protocol.py  registry.py  sandbox.py  system.py  task.py  utility.py  web.py
