[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coalyx-cli"
version = "0.2.0"
description = "A multi-task AI Chat CLI with Adaptive Uncertainty-Aware Reasoning"
authors = [
    { name="Nam Pham" }
]
requires-python = ">=3.9"
dependencies = [
    "litellm>=1.34.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "google-generativeai>=0.4.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "prompt_toolkit>=3.0.0"
]

[project.scripts]
coalyx = "src.cli.main:app"

[tool.pyrefly]
source = ["."]
